aws/SecurityGroups-ap-south-1.json
{
 "SecurityGroups": [
  {
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "UserIdGroupPairs": [], 
     "Ipv6Ranges": []
    }
   ], 
   "Description": "default VPC security group", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "PrefixListIds": [], 
     "IpRanges": [], 
     "UserIdGroupPairs": [
      {
       "UserId": "118292266645", 
       "GroupId": "sg-d9304bb0"
      }
     ], 
     "Ipv6Ranges": []
    }
   ], 
   "GroupName": "default", 
   "VpcId": "vpc-9ac442f3", 
   "OwnerId": "118292266645", 
   "GroupId": "sg-d9304bb0"
  }
 ]
}
